docs/book/samples/ch03/peek_check.kso
type track
  artist:string
  minutes:int
  title:string

pub play =
  song = track "fishmans" 6 "long season"
  track artist _ title = song
  print "{title}, by {artist}"
